# vicon2zenoh

./: .gitignore  CMakeLists.txt  README.md  config.cfg
include/: vicon.hpp  vicon2pose.hpp
scripts/: vicon2pose.py
src/: main.cpp  vicon.cpp  vicon2pose.cpp
